# Market-Comparator

./: README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
src/models/: __init__.py  product.py
src/scrapers/: __init__.py  base.py  carrefour.py  condor.py  muffato.py  run.py
