[project]
name = "market-comparator"
version = "0.1.0"
description = "Comparador de preços de supermercados - Curitiba/PR"
requires-python = ">=3.11"
dependencies = [
    # HTTP
    "httpx>=0.27",
    "aiohttp>=3.9",
    # Scraping
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    # Data
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    # Matching
    "rapidfuzz>=3.6",           # fuzzy matching (C-based, muito mais rápido que fuzzywuzzy)
    "unidecode>=1.3",           # normalizar acentos
    # DB
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",            # PostgreSQL async driver
    "alembic>=1.13",            # migrations
    # Logging & utils
    "loguru>=0.7",
    "tenacity>=8.2",            # retry logic para scrapers
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]